tests/baselines/reference/derivedClassOverridesWithoutSubtype.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesWithoutSubtype.ts(8,5): error TS2610: Class 'Base' defines instance member property 'x', so extended class 'Derived' must provide an initializer with this override.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesWithoutSubtype.ts (1 errors) ====
    class Base {
        x: {
            foo: string;
        }
    }
    
    class Derived extends Base {
        x: {
        ~
!!! error TS2610: Class 'Base' defines instance member property 'x', so extended class 'Derived' must provide an initializer with this override.
            foo: any;
        }
    }
    
    class Base2 {
        static y: {
            foo: string;
        }
    }
    
    class Derived2 extends Base2 {
        static y: {
            foo: any;
        }
    }